# Task37.3_QML_RemoteControl

./: CMakeLists.txt  README.md  Resurce.qrc  Task37_3RemContrl.qmlproject  Task37_3RemContrl.qmlproject.qtds  Task37_3RemContrl.qmlrc  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Task37_3RemContrl/: CMakeLists.txt  qmldir
imports/Task37_3RemContrl/designer/: plugin.metainfo
src/: import_qml_plugins.h
